# GesturesTool

./: .gitignore  CMakeLists.txt  LICENSE  main.cpp  main.h
